<resources>
    <string name="app_name">Dancing Bones App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_bar_title">Dancing Bones App</string>

    <string name="action_settings">Settings</string>

    <string name="nav_donate">Donate</string>
    <string name="nav_stay_in_touch">Stay in touch</string>
    <string name="nav_visit">Visit</string>
    <string name="title_about">Dancing Bones Community</string>
    <string name="title_donate">Donate Screen!</string>
    <string name="title_stay_in_touch">Stay in touch screen!</string>
    <string name="title_hiker_info">Hiker Info Screen!</string>
    <string name="title_visit">Visit Screen!</string>
    <string name="title_news">News Screen</string>
    <string name="nav_hiker_info">Hiker Info</string>
    <string name="nav_news">News</string>
    <string name="nav_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="button_visit">Show me the way to Dancing Bones</string>
    <string name="button_stay_in_touch">Sign me up!</string>

    <!-- values for Temperature Scale preference -->
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="OPEN_WEATHER_MAP_API_KEY" translatable="false">29f4a59b465757d471162fcb063b90c4</string>
</resources>
